Updating last project

--- a/Desktop3/desktop3.html
+++ b/Desktop3/desktop3.html
@@ -34,14 +34,14 @@
           </div>
           <input type="checkbox" id="check" />
           <span class="menu">
-            <li><a href="/Desktop1.html">Home</a></li>
-            <li><a href="/desktop2.html">Menu</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/Desktop2/desktop2.html">Menu</a></li>
             <li>
-              <a class="current" href="/desktop3.html">Services</a>
+              <a class="current" href="/Desktop3/desktop3.html">Services</a>
             </li>
-            <li><a href="/Desktop4.html">Product</a></li>
-            <li><a href="/Desktop5.html">Blog</a></li>
-            <li><a href="/desktop6.html">Contact</a></li>
+            <li><a href="/Desktop4/Desktop4.html">Product</a></li>
+            <li><a href="/Desktop5/Desktop5.html">Blog</a></li>
+            <li><a href="/Desktop6/desktop6.html">Contact</a></li>
             <label for="check" class="close-menu"
               ><i class="fa-solid fa-circle-xmark"></i
             ></label>
