--- a/Desktop4/Desktop4.html
+++ b/Desktop4/Desktop4.html
@@ -31,12 +31,12 @@
           <img src="/Desktop4/Image/user icon.png" alt="" />
         </div>
         <div class="sub-menu">
-          <a href="/Desktop1.html">Home</a>
-          <a href="/desktop2.html">Menu</a>
-          <a href="/desktop3.html">Services</a>
-          <a class="current" href="/Desktop4.html">Product</a>
-          <a href="/Desktop5.html">Blog</a>
-          <a href="/desktop6.html">Contact</a>
+          <a href="/index.html">Home</a>
+          <a href="/Desktop2/desktop2.html">Menu</a>
+          <a href="/Desktop3/desktop3.html">Services</a>
+          <a class="current" href="/Desktop4/Desktop4.html">Product</a>
+          <a href="/Desktop5/Desktop5.html">Blog</a>
+          <a href="/Desktop6/desktop6.html">Contact</a>
         </div>
       </nav>
     </header>
