--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </div>
         <div class="sub-menu">
           <a class="current" href="/Code.html">Home</a>
-          <a href="/desktop2.html">Menu</a>
-          <a href="/desktop3.html">Services</a>
-          <a href="/Desktop4.html">Product</a>
-          <a href="/Desktop5.html">Blog</a>
-          <a href="/desktop6.html">Contact</a>
+          <a href="/Desktop2/desktop2.html">Menu</a>
+          <a href="/Desktop3/desktop3.html">Services</a>
+          <a href="/Desktop4/Desktop4.html">Product</a>
+          <a href="/Desktop5/Desktop5.html">Blog</a>
+          <a href="/Desktop6/desktop6.html">Contact</a>
         </div>
       </nav>
     </header>
